@startuml TD1Step1
package TD1 {
  package step1 {
    package api.general {
        interface Product{
            weight(): double
            price(): double
        }

        interface Food{
            calories_per_100g(): double
        }

        interface FoodProduct extends Food, Product{
            calories(): double <<default>>
        }

        class Burger{
            name : String

            +this(in name: String, in items: List<FoodProduct>)
            +weight(): double
            +price(): double
            +toString(): String
        }

        class Sauce implements FoodProduct{
            -BASE_PRICE: {static} double
            -type: SauceType
            -weight: double
            +SauceType: {static} enum

            +this(in type: SauceType, in weight : double)
            +weight(): double
            +toString(): String
        }

        class Meat implements FoodProduct{
            -type: MeatType
            -weight: double
            +MeatType: enum

            +this(in type: MeatType, in weight : double)
            +weight(): double
            +price(): double
            +toString(): String
        }

        class Cheddar implements FoodProduct{
            -weight: double
            -BASE_PRICE: double

            +this(in weight : double)
            +weight(): double
            +price(): double
            +toString(): String
        }

        class Tomato implements FoodProduct{
            -weight: double
            -BASE_PRICE: double

            +this(in weight : double)
            +weight(): double
            +price(): double
            +toString(): String
        }

        class DeepFriedOnion implements FoodProduct{
            -weight: double
            -BASE_PRICE: double

            +this(in weight : double)
            +weight(): double
            +price(): double
            +toString(): String
        }

        enum SauceType implements Food{
            BURGER, BARBECUE, BEARNAISE
        }

        enum MeatType implements Food{
            BEEF, WHITEFISH
            +price(): double
        }


            FoodProduct "*" <--*  Burger : -items

            Sauce <--* SauceType : -type
            Meat <--* MeatType : -type
    }

    package client {
        class App
    }

  }

  client ..> api.general

}



@enduml